修改页面中的description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+<!-- description主题页中的一句描述 -->
+description: "梦里挑灯看剑"
 ---
 
 {% for post in paginator.posts %}
