--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: 愿世界化为沧海，愿你我归于初见
 header-img: "img/tag-bg.jpg"
 ---
 
